RESOLVED FIXED41020
Slider labels do not update as you move the sliders on this page
https://bugs.webkit.org/show_bug.cgi?id=41020
Summary Slider labels do not update as you move the sliders on this page
Simon Fraser (smfr)
Reported 2010-06-22 16:21:09 PDT
Load http://slides.html5rocks.com/#slide39 and play with the box-shadow sliders. Note how the numbers next to the sliders fail to update when moving the slider thumb. However, we do move the slider around as if we were doing layout. The text-shadow sliders work OK.
Attachments
Testcase (996 bytes, text/html)
2010-08-19 12:17 PDT, Simon Fraser (smfr)
no flags
Patch (10.88 KB, patch)
2010-08-19 14:26 PDT, Simon Fraser (smfr)
no flags
Patch (7.43 KB, patch)
2010-08-20 11:35 PDT, Simon Fraser (smfr)
mitz: review+
mitz
Comment 1 2010-06-22 16:32:26 PDT
This only happens in the two-column configuration. If I disable the -webkit-column-count: 2; property, I don’t see the problem.
Simon Fraser (smfr)
Comment 2 2010-08-19 12:17:21 PDT
Created attachment 64886 [details] Testcase
Simon Fraser (smfr)
Comment 3 2010-08-19 12:18:23 PDT
The issue is that 'repaintTop', returned by layoutInlineChildren(), doesn't take columns into account.
Simon Fraser (smfr)
Comment 4 2010-08-19 12:21:50 PDT
Ah, this would be: // FIXME: Deal with multiple column repainting. We have to split the repaint // rect up into multiple rects if it spans columns. in RenderBlock::layoutBlock()
Simon Fraser (smfr)
Comment 5 2010-08-19 14:26:09 PDT
Simon Fraser (smfr)
Comment 6 2010-08-20 11:00:20 PDT
Comment on attachment 64899 [details] Patch Going to update this based on feedback from hyatt.
Simon Fraser (smfr)
Comment 7 2010-08-20 11:35:05 PDT
Simon Fraser (smfr)
Comment 8 2010-08-20 11:50:12 PDT
Note You need to log in before you can comment on or make changes to this bug.