2010-08-20  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Slider labels do not update as you move the sliders on this page
        https://bugs.webkit.org/show_bug.cgi?id=41020

        When repainting after layout in a multicol element, we need to adjust the
        repaint rect for the columns.

        Test: fast/repaint/multicol-repaint.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock):

Canonical link: https://commits.webkit.org/56526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65746 268f45cc-cd09-0410-ab3c-d52691b4dbfc